language/move-lang/tests/move_check/parser/struct_type_missing_angle.exp
error: 

   ┌── tests/move_check/parser/struct_type_missing_angle.move:3:21 ───
   │
 3 │     struct S<T1, T2 { }
   │                     ^ Expected '>'
   ·
 3 │     struct S<T1, T2 { }
   │             - To match this '<'
   │

