language/move-lang/tests/move_check/parser/struct_type_missing_angle.move
module M {
    // Test a missing ">" after the type parameters.
    struct S<T1, T2 { }
}
